Version 2.2.042
    You can now define custom sounds to be played in sounds.yml (Thank you JeBobs, see notes)

    Notes:
    The new sounds.yml config file allows you to override the sounds played by mcMMO.
    Simply define the ID of the sound you want to play for each sound.
    For example, add an entry for Sounds.TOOL_READY.CustomSoundId into sounds.yml to override the sound played when a tool is "readied".
    If you are on older versions (1.18, 1.19, etc), instead of registering an ID, you specify the Sound enum.
    Those who are on newer versions, can define the ID of any sound registered with Paper/Spigot, this allows you to even play custom sounds so long as they are properly loaded on the server.
    Vanilla minecraft sounds tend to have IDs like "minecraft:ui.toast.challenge_complete", you can google what these keys are.

Version 2.2.041
    Fixed Berserk failing to crack blocks
    Added 'Skills.Unarmed.Block_Cracker.Allow_Block_Cracker' to config.yml
    Removed 'SmoothBrick_To_CrackedBrick', it has been replaced by `Allow_Block_Cracker`
    Block Cracker can now crack deepslate bricks, deepslate tiles, polished blackstone bricks, and netherbricks
    Optimizations for Hoppers & Alchemy (thanks Warriorrrr)
    Fixed buckets being consumed by furnaces (thanks RunqRun)
    Fixed Repair stripping unsafe enchantments from items (thanks Techirion)
    Fixed IronGolem causing cast exceptions in rare cases (thanks Techirion)

Version 2.2.040
    Fixed hover component and action bar messages not working for 1.21.6 and 1.21.7
    Fixed bug where entries of mctop could be duplicated when using FlatFile
    Fixed bug where a party leader could leave a party and the party would be left without a party leader
    Fixed a bug where EcoEnchants and similar plugins could cause an infinite loop within mcMMO during TreeFeller and other abilities
    Added 'Happy_Ghast' to experience.yml for combat XP
    Added 'Ghastling' to experience.yml for combat XP